plugins {
    id "java"
    id "jacoco"
    id "org.sonarqube" version "7.0.1.6134"
    id "com.diffplug.spotless" version "8.0.0"
    id "info.solidsoft.pitest" version "1.15.0"
    id "org.springframework.boot" version "3.5.12"
    id "io.spring.dependency-management" version "1.1.7"
}

group = "uk.gov.justice.laa.crime"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

def versions = [
        springdoc                : "2.8.14",
        crimeCommonsClasses      : "4.10.0",
        crimeCommonsModsSchemas  : "1.36.0",
        sentry                   : "8.26.0",
        resilience4j             : "2.4.0",
        commonsLang3             : "3.20.0",
        wiremock                 : "4.0.8"
]

configurations {
    configureEach {
        exclude group: 'junit', module: 'junit'
    }
}

repositories {
    mavenCentral()
    maven {
        url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
    }
}

dependencies {

    // ---- Monitoring & Logging ----
    implementation platform("io.sentry:sentry-bom:$versions.sentry")
    implementation "io.sentry:sentry-logback"
    implementation "io.sentry:sentry-spring-boot-starter-jakarta"
    implementation 'io.micrometer:micrometer-tracing'
    implementation "io.micrometer:micrometer-registry-prometheus"
    implementation 'io.micrometer:micrometer-tracing-bridge-brave'

    // ---- Core Application ----
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-webflux"
    implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"

    implementation "org.postgresql:postgresql"
    implementation "org.liquibase:liquibase-core"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$versions.springdoc"
    implementation "org.apache.commons:commons-lang3:$versions.commonsLang3"
    implementation "uk.gov.justice.service.laa-crime:crime-commons-classes:$versions.crimeCommonsClasses"
    implementation "uk.gov.justice.service.laa-crime:crime-commons-mod-schemas:$versions.crimeCommonsModsSchemas"

    // ---- Resilience4j ----
    implementation "io.github.resilience4j:resilience4j-reactor:$versions.resilience4j"
    implementation "io.github.resilience4j:resilience4j-spring-boot3:$versions.resilience4j"

    // ---- Lombok ----
    compileOnly "org.projectlombok:lombok"
    annotationProcessor "org.projectlombok:lombok"
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    // ---- Testing ----
    testCompileOnly "org.projectlombok:lombok"
    testAnnotationProcessor "org.projectlombok:lombok"

    testImplementation "com.h2database:h2"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.wiremock.integrations:wiremock-spring-boot:$versions.wiremock"


}

jacoco {
    toolVersion = "0.8.13"
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    "**/entity/**",
                    "**/dto/**",
                    "**/config/**"
            ])
        }))
    }
}

pitest {
    targetClasses = ["uk.gov.justice.laa.crime.contribution.*",
                     "uk.gov.justice.laa.crime.contribution.controller.*",
                     "uk.gov.justice.laa.crime.contribution.validation.*"
    ]
    excludedClasses = ["uk.gov.justice.laa.crime.contribution.dto.*",
                       "uk.gov.justice.laa.crime.contribution.mapper.*",
                       "uk.gov.justice.laa.crime.contribution.CrownCourtContributionApplication"
    ]
    threads = 5
    outputFormats = ["XML", "HTML"]
    timestampedReports = false
    mutationThreshold = 60
}

def isCiBuild = System.getenv("SONAR_TOKEN") != null

if (isCiBuild) {
    tasks.named("sonar") {
        dependsOn "test"
    }
}

sonar {
    skipProject = !isCiBuild
    properties {
        property "sonar.exclusions", "**/entity/**.java , **/model/**.java , **/dto/**.java , **/config/**.java, **/jms/**.java,**/exception/**.java,**/handler/**.java"
        property "sonar.coverage.exclusions", "**/CrownCourtContributionApplication.java"
        property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.projectKey", "ministryofjustice_laa-crown-court-contribution"
        property "sonar.organization", "ministryofjustice"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.projectName", "Crime Apps :: crown-court-contribution"
        property "sonar.pitest.mode", "reuseReport"
        property "sonar.pitest.reportsDirectory", "build/reports/pitest"
    }
}

spotless {
    java {
        target 'src/*/java/**/*.java'
        targetExclude '**/generated/**', '**/build/**'

        formatAnnotations()
        palantirJavaFormat()
        importOrder('', 'java', 'javax', 'org', 'com')

        endWithNewline()
        trimTrailingWhitespace()
        removeUnusedImports()
        forbidWildcardImports()

        // Custom rule: Disallow JUnit assertions
        custom("Refuse JUnit assertions", { text ->
            if (text =~ /\bassert(?:Equals|True|False|Null|NotNull|Same|NotSame|ArrayEquals)\b/) {
                throw new IllegalStateException(
                        "Use AssertJ (assertThat(...)) instead of JUnit assertions."
                )
            }
            text
        } as Closure<String>)
    }
}
